--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
-        "laravel/framework": "5.7.*",
-        "laravelcollective/html": "5.7.*",
+        "laravel/framework": "5.8.*",
+        "laravelcollective/html": "*",
         "intervention/image": "^2.5"
     },
     "require-dev": {
