--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,10 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
-        "laravel/framework": "5.8.*",
+        "laravel/framework": "6.0.*",
         "laravelcollective/html": "*",
-        "intervention/image": "^2.5"
+        "intervention/image": "^2.5",
+        "laravel/helpers": "^1.4"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
